Don't allow to select budgets if they are included by a superior account. We still need to add logic to support multiple currencies. I left a TODO mark in the code.

BUG: 255135

svn path=/trunk/extragear/office/kmymoney/; revision=1208388